--- a/demo_scripts.ipynb
+++ b/demo_scripts.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -186,7 +186,7 @@
        "1  Age, Sex, Duration of hemodialysis, Baseline p...  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -251,7 +251,7 @@
       " Within Participant Variability in Microbiome Composition by Treatment Phase, Within Participant Variability in Stool Metabolome by Treatment Phase, Within Participant Variability in Plasma Metabolome by Treatment Phase, \n",
       "##Answer:\n",
       "\n",
-      "Age, gender, duration of hemodialysis, stool frequency, use of birth control (for women of childbearing potential), use of prebiotics or probiotics, consumption of probiotic yogurt, use of antibiotics, presence of HIV infection, presence of chronic wound infection, presence of osteomyelitis, presence of inflammatory bowel disease, presence of chronic diarrhea, presence of C. difficile infection, presence of cirrhosis, presence of chronic active hepatitis, anticipated kidney transplantation, anticipated change to peritoneal dialysis, anticipated transfer to another dialysis unit, expected survival, pregnancy status, breastfeeding status, incarceration status, participation in another intervention study, hemoglobin levels.\n"
+      "Age, gender, duration of hemodialysis, stool frequency, use of birth control (for women of childbearing potential), baseline microbiome composition, baseline stool metabolome, baseline plasma metabolome, hemoglobin levels, presence of chronic conditions (e.g., HIV, inflammatory bowel disease, cirrhosis), medication use (e.g., antibiotics, prebiotics, probiotics), anticipated kidney transplantation, pregnancy status, incarceration status, participation in other intervention studies.\n"
      ]
     }
    ],
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -450,28 +450,146 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "run_evaluation_with_gpt4o() missing 1 required positional argument: 'openai_token'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[9], line 7\u001b[0m\n\u001b[1;32m      5\u001b[0m qstart \u001b[38;5;241m=\u001b[39m module\u001b[38;5;241m.\u001b[39mget_question_from_row(row)\n\u001b[1;32m      6\u001b[0m system_message, question \u001b[38;5;241m=\u001b[39m module\u001b[38;5;241m.\u001b[39mbuild_gpt4_eval_prompt(reference_list, candidate_list, qstart)\n\u001b[0;32m----> 7\u001b[0m model_response \u001b[38;5;241m=\u001b[39m \u001b[43mmodule\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mrun_evaluation_with_gpt4o\u001b[49m\u001b[43m(\u001b[49m\u001b[43msystem_message\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mquestion\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      9\u001b[0m \u001b[38;5;28mprint\u001b[39m(system_message)\n\u001b[1;32m     10\u001b[0m \u001b[38;5;28mprint\u001b[39m(question)\n",
-      "\u001b[0;31mTypeError\u001b[0m: run_evaluation_with_gpt4o() missing 1 required positional argument: 'openai_token'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "        You are an expert assistant in the medical domain and clinical trial design. You are provided with details of a clinical trial.\n",
+      "        Your task is to determine which candidate baseline features match any feature in a reference baseline feature list for that trial. \n",
+      "        You need to consider the context and semantics while matching the features.\n",
+      "\n",
+      "        For each candidate feature:\n",
+      "\n",
+      "            1. Identify a matching reference feature based on similarity in context and semantics.\n",
+      "            2. Remember the matched pair.\n",
+      "            3. A reference feature can only be matched to one candidate feature and cannot be further considered for any consecutive matches.\n",
+      "            4. If there are multiple possible matches (i.e. one reference feature can be matched to multiple candidate features or vice versa), choose the most contextually similar one.\n",
+      "            5. Also keep track of which reference and candidate features remain unmatched.\n",
+      "\n",
+      "        Once the matching is complete, provide the results in a JSON format as follows:\n",
+      "        {\n",
+      "        \"matched_features\": [\n",
+      "            [\"<reference feature 1>\", \"<candidate feature 1>\"],\n",
+      "            [\"<reference feature 2>\", \"<candidate feature 2>\"]\n",
+      "        ],\n",
+      "        \"remaining_reference_features\": [\n",
+      "            \"<unmatched reference feature 1>\",\n",
+      "            \"<unmatched reference feature 2>\"\n",
+      "        ],\n",
+      "        \"remaining_candidate_features\": [\n",
+      "            \"<unmatched candidate feature 1>\",\n",
+      "            \"<unmatched candidate feature 2>\"\n",
+      "        ]\n",
+      "        }\n",
+      "    \n",
+      "\n",
+      " Here is the trial information: \n",
+      "\n",
+      "<Title> \n",
+      " Use of Pedometers to Measure and Increase Walking Among Patients With ESRD\n",
+      "<Brief Summary> \n",
+      " Randomized controlled trial using pedometers to increase physical activity among patients on dialysis.\n",
+      "<Condition> \n",
+      " End-stage Renal Disease, \n",
+      "<Eligibility Criteria> \n",
+      " Inclusion Criteria:\n",
+      "\n",
+      "* on hemodialysis for ≥ 3 months\n",
+      "* able to walk\n",
+      "* able to give informed consent and willing to participate\n",
+      "\n",
+      "Exclusion Criteria:\n",
+      "\n",
+      "* unable to walk\n",
+      "* unable to understand directions or give informed consent\n",
+      "<Intervention> \n",
+      " pedometer, \n",
+      "<Outcome> \n",
+      " Physical Activity, \n",
+      "\n",
+      "\n",
+      "Here is the list of reference features: \n",
+      "\n",
+      "1. Age\n",
+      "2. Sex\n",
+      "3. Race\n",
+      "4. Ethnicity\n",
+      "5. BMI\n",
+      "6. HTN\n",
+      "7. DM\n",
+      "8. CAD\n",
+      "9. CHF\n",
+      "10. Stroke\n",
+      "11. Peripheral Vascular Disease\n",
+      "12. HIV\n",
+      "13. Arrhythmia\n",
+      "14. Dialysis Vintage (Years)\n",
+      "15. Hemoglobin\n",
+      "16. Serum Albumin\n",
+      "17. Std Kt/V\n",
+      "18. Education\n",
+      "19. Currently smoking\n",
+      "\n",
+      "Candidate features: \n",
+      "\n",
+      "1. age\n",
+      "2. sex\n",
+      "3. body mass index\n",
+      "4. dialysis duration\n",
+      "5. comorbidities\n",
+      "6. walking ability\n",
+      "7. cognitive function\n",
+      "8. depression score\n",
+      "9. quality of life score.\n",
+      "\n",
+      "{\n",
+      "    \"matched_features\": [\n",
+      "        [\"Age\", \"age\"],\n",
+      "        [\"Sex\", \"sex\"],\n",
+      "        [\"BMI\", \"body mass index\"],\n",
+      "        [\"Dialysis Vintage (Years)\", \"dialysis duration\"]\n",
+      "    ],\n",
+      "    \"remaining_reference_features\": [\n",
+      "        \"Race\",\n",
+      "        \"Ethnicity\",\n",
+      "        \"HTN\",\n",
+      "        \"DM\",\n",
+      "        \"CAD\",\n",
+      "        \"CHF\",\n",
+      "        \"Stroke\",\n",
+      "        \"Peripheral Vascular Disease\",\n",
+      "        \"HIV\",\n",
+      "        \"Arrhythmia\",\n",
+      "        \"Hemoglobin\",\n",
+      "        \"Serum Albumin\",\n",
+      "        \"Std Kt/V\",\n",
+      "        \"Education\",\n",
+      "        \"Currently smoking\"\n",
+      "    ],\n",
+      "    \"remaining_candidate_features\": [\n",
+      "        \"comorbidities\",\n",
+      "        \"walking ability\",\n",
+      "        \"cognitive function\",\n",
+      "        \"depression score\",\n",
+      "        \"quality of life score\"\n",
+      "    ]\n",
+      "}\n"
      ]
     }
    ],
    "source": [
-    "row = next(data.iterrows())[1]\n",
+    "row = data.iloc[1]\n",
     "reference_list = row['Paper_BaselineMeasures']\n",
     "candidate_list = row['LLama3_70b_in']\n",
     "\n",
     "qstart = module.get_question_from_row(row)\n",
-    "system_message, question = module.build_gpt4_eval_prompt(reference_list, candidate_list, qstart)\n",
+    "system_message, question = module.build_gpt4_eval_prompt(module.extract_elements(reference_list), \n",
+    "                                                         module.extract_elements(candidate_list), \n",
+    "                                                         qstart)\n",
     "model_response = module.run_evaluation_with_gpt4o(system_message, question, openai_api_key)\n",
     "\n",
     "print(system_message)\n",
