Updated Data and Demo Codes

--- a/demo_scripts.ipynb
+++ b/demo_scripts.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,15 +39,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "These three IDs are three-shot example IDs in each dataset - ['NCT00000620', 'NCT01483560', 'NCT04280783']. Do not run generation or evaluation on them."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(103, 16)\n"
+      "(103, 9)\n"
      ]
     },
     {
@@ -76,17 +83,10 @@
        "      <th>EligibilityCriteria</th>\n",
        "      <th>BriefSummary</th>\n",
        "      <th>Conditions</th>\n",
-       "      <th>StudyType</th>\n",
        "      <th>Interventions</th>\n",
        "      <th>PrimaryOutcomes</th>\n",
        "      <th>BaselineMeasures</th>\n",
        "      <th>Paper_BaselineMeasures</th>\n",
-       "      <th>LLama3_70b_in</th>\n",
-       "      <th>LLama3_70b_in_threeshot</th>\n",
-       "      <th>GPT4_Turbo_in</th>\n",
-       "      <th>GPT4_Turbo_in_threeshot</th>\n",
-       "      <th>GPT4_Omni_in</th>\n",
-       "      <th>GPT4_Omni_in_threeshot</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -97,17 +97,10 @@
        "      <td>Inclusion Criteria:\\n\\n* Maintenance hemodialy...</td>\n",
        "      <td>The Microbiome trial is a non-randomized, open...</td>\n",
        "      <td>End-Stage Renal Disease, Gut Microbiome Dysbio...</td>\n",
-       "      <td>INTERVENTIONAL</td>\n",
        "      <td>p-inulin,</td>\n",
        "      <td>Within Participant Variability in Microbiome C...</td>\n",
        "      <td>Age, Categorical, Age, Continuous, Sex: Female...</td>\n",
        "      <td>Age, Sex, Race, Ethnicity, Hypertension, Diabe...</td>\n",
-       "      <td>Age, sex, race, ethnicity, body mass index, he...</td>\n",
-       "      <td>Age, Sex, Ethnicity, Body Mass Index (BMI), He...</td>\n",
-       "      <td>Age, Gender, Duration of hemodialysis therapy,...</td>\n",
-       "      <td>Age, Sex, Duration of hemodialysis, Frequency ...</td>\n",
-       "      <td>Age, gender, duration of hemodialysis, stool f...</td>\n",
-       "      <td>Age, Sex, Duration of hemodialysis, Stool freq...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -116,17 +109,10 @@
        "      <td>Inclusion Criteria:\\n\\n* on hemodialysis for ≥...</td>\n",
        "      <td>Randomized controlled trial using pedometers t...</td>\n",
        "      <td>End-stage Renal Disease,</td>\n",
-       "      <td>INTERVENTIONAL</td>\n",
        "      <td>pedometer,</td>\n",
        "      <td>Physical Activity,</td>\n",
        "      <td>Age, Continuous, Sex: Female, Male, Ethnicity ...</td>\n",
        "      <td>Age, Sex, Race, Ethnicity, BMI, HTN, DM, CAD, ...</td>\n",
-       "      <td>age, sex, body mass index, dialysis duration, ...</td>\n",
-       "      <td>Age, Sex, Ethnicity, BMI, Dialysis vintage, Co...</td>\n",
-       "      <td>age, gender, duration on hemodialysis, baselin...</td>\n",
-       "      <td>Age, Sex, Duration on dialysis, Baseline physi...</td>\n",
-       "      <td>Age, gender, duration on hemodialysis, baselin...</td>\n",
-       "      <td>Age, Sex, Duration of hemodialysis, Baseline p...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -145,68 +131,151 @@
        "0  The Microbiome trial is a non-randomized, open...   \n",
        "1  Randomized controlled trial using pedometers t...   \n",
        "\n",
-       "                                          Conditions       StudyType  \\\n",
-       "0  End-Stage Renal Disease, Gut Microbiome Dysbio...  INTERVENTIONAL   \n",
-       "1                          End-stage Renal Disease,   INTERVENTIONAL   \n",
+       "                                          Conditions Interventions  \\\n",
+       "0  End-Stage Renal Disease, Gut Microbiome Dysbio...    p-inulin,    \n",
+       "1                          End-stage Renal Disease,    pedometer,    \n",
        "\n",
-       "  Interventions                                    PrimaryOutcomes  \\\n",
-       "0    p-inulin,   Within Participant Variability in Microbiome C...   \n",
-       "1   pedometer,                                 Physical Activity,    \n",
+       "                                     PrimaryOutcomes  \\\n",
+       "0  Within Participant Variability in Microbiome C...   \n",
+       "1                                Physical Activity,    \n",
        "\n",
        "                                    BaselineMeasures  \\\n",
        "0  Age, Categorical, Age, Continuous, Sex: Female...   \n",
        "1  Age, Continuous, Sex: Female, Male, Ethnicity ...   \n",
        "\n",
-       "                              Paper_BaselineMeasures  \\\n",
-       "0  Age, Sex, Race, Ethnicity, Hypertension, Diabe...   \n",
-       "1  Age, Sex, Race, Ethnicity, BMI, HTN, DM, CAD, ...   \n",
-       "\n",
-       "                                       LLama3_70b_in  \\\n",
-       "0  Age, sex, race, ethnicity, body mass index, he...   \n",
-       "1  age, sex, body mass index, dialysis duration, ...   \n",
-       "\n",
-       "                             LLama3_70b_in_threeshot  \\\n",
-       "0  Age, Sex, Ethnicity, Body Mass Index (BMI), He...   \n",
-       "1  Age, Sex, Ethnicity, BMI, Dialysis vintage, Co...   \n",
-       "\n",
-       "                                       GPT4_Turbo_in  \\\n",
-       "0  Age, Gender, Duration of hemodialysis therapy,...   \n",
-       "1  age, gender, duration on hemodialysis, baselin...   \n",
-       "\n",
-       "                             GPT4_Turbo_in_threeshot  \\\n",
-       "0  Age, Sex, Duration of hemodialysis, Frequency ...   \n",
-       "1  Age, Sex, Duration on dialysis, Baseline physi...   \n",
-       "\n",
-       "                                        GPT4_Omni_in  \\\n",
-       "0  Age, gender, duration of hemodialysis, stool f...   \n",
-       "1  Age, gender, duration on hemodialysis, baselin...   \n",
-       "\n",
-       "                              GPT4_Omni_in_threeshot  \n",
-       "0  Age, Sex, Duration of hemodialysis, Stool freq...  \n",
-       "1  Age, Sex, Duration of hemodialysis, Baseline p...  "
+       "                              Paper_BaselineMeasures  \n",
+       "0  Age, Sex, Race, Ethnicity, Hypertension, Diabe...  \n",
+       "1  Age, Sex, Race, Ethnicity, BMI, HTN, DM, CAD, ...  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data = pd.read_csv('data/Gold-100.csv')\n",
-    "print(data.shape)\n",
-    "data.head(2)"
+    "data_pub = pd.read_csv('data/CT-Pub-With-Examples.csv')\n",
+    "print(data_pub.shape)\n",
+    "data_pub.head(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1693, 8)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>NCTId</th>\n",
+       "      <th>BriefTitle</th>\n",
+       "      <th>EligibilityCriteria</th>\n",
+       "      <th>BriefSummary</th>\n",
+       "      <th>Conditions</th>\n",
+       "      <th>Interventions</th>\n",
+       "      <th>PrimaryOutcomes</th>\n",
+       "      <th>BaselineMeasures</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>NCT02151643</td>\n",
+       "      <td>Study to Evaluate the Efficacy and Safety of P...</td>\n",
+       "      <td>Inclusion Criteria:\\n\\n* Men or women aged 18 ...</td>\n",
+       "      <td>The main purpose of this study is to see wheth...</td>\n",
+       "      <td>Hyperphosphataemia,</td>\n",
+       "      <td>PT20, Placebo,</td>\n",
+       "      <td>Change in Serum Phosphate Concentration From B...</td>\n",
+       "      <td>Age, Continuous, Sex: Female, Male, Ethnicity ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>NCT03036150</td>\n",
+       "      <td>A Study to Evaluate the Effect of Dapagliflozi...</td>\n",
+       "      <td>Inclusion Criteria:\\n\\n* Provision of signed i...</td>\n",
+       "      <td>The purpose of this study is to evaluate the e...</td>\n",
+       "      <td>Chronic Kidney Disease,</td>\n",
+       "      <td>Dapagliflozin, Placebo,</td>\n",
+       "      <td>Time to the First Occurrence of Any of the Com...</td>\n",
+       "      <td>Age, Continuous, Age, Customized, Age, Customi...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         NCTId                                         BriefTitle  \\\n",
+       "0  NCT02151643  Study to Evaluate the Efficacy and Safety of P...   \n",
+       "1  NCT03036150  A Study to Evaluate the Effect of Dapagliflozi...   \n",
+       "\n",
+       "                                 EligibilityCriteria  \\\n",
+       "0  Inclusion Criteria:\\n\\n* Men or women aged 18 ...   \n",
+       "1  Inclusion Criteria:\\n\\n* Provision of signed i...   \n",
+       "\n",
+       "                                        BriefSummary  \\\n",
+       "0  The main purpose of this study is to see wheth...   \n",
+       "1  The purpose of this study is to evaluate the e...   \n",
+       "\n",
+       "                 Conditions             Interventions  \\\n",
+       "0      Hyperphosphataemia,            PT20, Placebo,    \n",
+       "1  Chronic Kidney Disease,   Dapagliflozin, Placebo,    \n",
+       "\n",
+       "                                     PrimaryOutcomes  \\\n",
+       "0  Change in Serum Phosphate Concentration From B...   \n",
+       "1  Time to the First Occurrence of Any of the Com...   \n",
+       "\n",
+       "                                    BaselineMeasures  \n",
+       "0  Age, Continuous, Sex: Female, Male, Ethnicity ...  \n",
+       "1  Age, Continuous, Age, Customized, Age, Customi...  "
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_repo = pd.read_csv('data/CT-Repo-With-Examples-Processed-Version.csv')\n",
+    "print(data_repo.shape)\n",
+    "data_repo.head(2)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Example of Generation using GPT-4o with 0-shot prompts"
+    "## Example of Generation using GPT-4o with 0-shot prompts (CT-Pub)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -251,15 +320,15 @@
       " Within Participant Variability in Microbiome Composition by Treatment Phase, Within Participant Variability in Stool Metabolome by Treatment Phase, Within Participant Variability in Plasma Metabolome by Treatment Phase, \n",
       "##Answer:\n",
       "\n",
-      "Age, gender, duration of hemodialysis, stool frequency, use of birth control (for women of childbearing potential), baseline microbiome composition, baseline stool metabolome, baseline plasma metabolome, hemoglobin levels, presence of chronic conditions (e.g., HIV, inflammatory bowel disease, cirrhosis), medication use (e.g., antibiotics, prebiotics, probiotics), anticipated kidney transplantation, pregnancy status, incarceration status, participation in other intervention studies.\n"
+      "Age, gender, duration of hemodialysis, stool frequency, use of birth control (for women of childbearing potential), use of prebiotics or probiotics, consumption of probiotic yogurt, use of antibiotics, presence of HIV infection, presence of chronic wound infection, presence of osteomyelitis, presence of inflammatory bowel disease, presence of chronic diarrhea, presence of C. difficile infection, presence of cirrhosis, presence of chronic active hepatitis, anticipated kidney transplantation, anticipated change to peritoneal dialysis, anticipated transfer to another dialysis unit, expected survival, pregnancy status, breastfeeding status, incarceration status, participation in another intervention study, hemoglobin levels.\n"
      ]
     }
    ],
    "source": [
     "model_name   = models['gpt-4o']\n",
     "\n",
-    "row = next(data.iterrows())[1]\n",
-    "system_message, question = module.build_zeroshot_prompt(data, row)\n",
+    "row = next(data_pub.iterrows())[1]\n",
+    "system_message, question = module.build_zeroshot_prompt(data_pub, row)\n",
     "model_query = module.system_user_template(system_message, question)\n",
     "model_response = module.run_generation_single_openai(model_query, model_name, \n",
     "                                                openai_api_key, temperature=0.0)\n",
@@ -277,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -333,7 +402,7 @@
       "<Outcome> \n",
       " Change in Averaged Mean Far Wall Common Carotid Artery Intima-media Thickness (cIMT), \n",
       "##Answer:\n",
-      "Age, Sex, Ethnic Origin, Diabetes duration, C-peptide, Existing CVD, Strong family history of CVD, HbA1c, Insulin regimen, Total daily insulin dose, BMI, BMI Category, Waist circumferance, Systolic Blood Pressure, Diastolic blood pressure, Total cholesterol, Smoking history, eGFR, Diabetic retinopathy, Neuropathy. Antihypertensive drugs, Statin, Antiplatelet drugs\n",
+      "Age, Categorical, Age, Continuous, Sex: Female, Male, Race and Ethnicity Not Collected, Region of Enrollment, Diabetes Diagnosis Duration, Existing Cardiovascular Disease, Baseline HbA1c, Daily Insulin Dose, BMI, Blood Pressure, Total Cholesterol, eGFR, Diabetic Retinopathy, \n",
       "\n",
       "##Question:\n",
       "<Title> \n",
@@ -354,7 +423,7 @@
       "<Outcome> \n",
       " First Occurrence of a Major Cardiovascular Event (MCE); Specifically Nonfatal Heart Attack, Nonfatal Stroke, or Cardiovascular Death (Measured Throughout the Study) in the Glycemia Trial., First Occurrence of Major Cardiovascular Event (MCE) in the Blood Pressure Trial., First Occurrence of Major Cardiovascular Event (MCE) in the Lipid Trial., \n",
       "##Answer:\n",
-      "Age, Female sex, Median duration of diabetes, Previous cardiovascular event, Previous congestive heart failure, Race or ethnic group, Education, Cigarette-smoking status, Weight, Body-mass index, Waist circumference, Blood pressure, Medications, Glycated hemoglobin, Fasting serum glucose, Cholesterol, Median triglyceride, Potassium, Serum creatinine\n",
+      "Age, Continuous, Gender, Ethnicity (NIH/OMB), Race/Ethnicity, Customized, Region of Enrollment, Previous cardiovascular disease (CVD) event, Glycated hemoglobin, Blood pressure, Cholesterol, Triglycerides, Diabetes duration, \n",
       "\n",
       "##Question:\n",
       "<Title> \n",
@@ -385,7 +454,7 @@
       "<Outcome> \n",
       " Percentage of Participants Retained at the End of Study, Percentage of Participants Who Self-monitored Step Count Using Wrist Worn ActiGraph GT9X Over the Study Period, Acceptability of PATH Intervention, \n",
       "##Answer:\n",
-      "Race, Sex, Age, Education, Employment, BMI, Systolic BP, Diastolic BP, Self-reported weekly MVPA (moderate-vigorous physical activity) using MAQ (modified activity questionnaire), Objective weekly MVPA (moderate-vigorous physical activity) minutes, Adherence to MVPA guidelines (≥150 mins/wk), Objective average daily steps, Adherence to steps guidelines (≥7500 steps/day)\n",
+      "Age, Continuous, Sex: Female, Male, Race/Ethnicity, Customized, Region of Enrollment, Body Mass Index, Systolic Blood Pressure, Diastolic Blood Pressure, Objective weekly MVPA minutes, Adherence to MVPA guidelines at baseline, Objective average daily steps, \n",
       "\n",
       "##Question:\n",
       "<Title> \n",
@@ -424,15 +493,15 @@
       " Within Participant Variability in Microbiome Composition by Treatment Phase, Within Participant Variability in Stool Metabolome by Treatment Phase, Within Participant Variability in Plasma Metabolome by Treatment Phase, \n",
       "##Answer:\n",
       "\n",
-      "Age, Sex, Ethnicity, Body Mass Index (BMI), Hemodialysis vintage, Dialysis adequacy (Kt/V), Residual renal function, Comorbidities (diabetes, hypertension, cardiovascular disease), Medications (phosphate binders, vitamin D, erythropoietin), Laboratory values (hemoglobin, albumin, calcium, phosphorus, parathyroid hormone), Stool frequency, Stool consistency.\n"
+      "Age, Continuous, Sex: Female, Male, Race/Ethnicity, Customized, Region of Enrollment, Hemodialysis vintage, Stool frequency, Body Mass Index, Hemoglobin, Albumin, Phosphorus, Calcium, Parathyroid hormone, Single-pool Kt/V, Urea reduction ratio,\n"
      ]
     }
    ],
    "source": [
     "model_hf_endpoint = models['llama3-70b-it']\n",
     "\n",
-    "row = next(data.iterrows())[1]\n",
-    "system_message, question = module.build_three_shot_prompt(data, row)\n",
+    "row = next(data_pub.iterrows())[1]\n",
+    "system_message, question = module.build_three_shot_prompt(data_pub, row)\n",
     "model_query = module.system_user_template(system_message, question)\n",
     "model_response = module.run_generation_single_hf_models(model_query, model_hf_endpoint, \n",
     "                                                hf_api_key, temperature=0.0)\n",
@@ -450,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -582,13 +651,15 @@
     }
    ],
    "source": [
-    "row = data.iloc[1]\n",
+    "row = data_pub.iloc[1]\n",
     "reference_list = row['Paper_BaselineMeasures']\n",
-    "candidate_list = row['LLama3_70b_in']\n",
+    "\n",
+    "#<insert any list generated by any LLM here>\n",
+    "candidate_list = 'age, sex, body mass index, dialysis duration, comorbidities, walking ability, cognitive function, depression score, quality of life score.'\n",
     "\n",
     "qstart = module.get_question_from_row(row)\n",
-    "system_message, question = module.build_gpt4_eval_prompt(module.extract_elements(reference_list), \n",
-    "                                                         module.extract_elements(candidate_list), \n",
+    "system_message, question = module.build_gpt4_eval_prompt(module.extract_elements_with_cleaning(reference_list), \n",
+    "                                                         module.extract_elements_with_cleaning(candidate_list), \n",
     "                                                         qstart)\n",
     "model_response = module.run_evaluation_with_gpt4o(system_message, question, openai_api_key)\n",
     "\n",
