--- a/human_eval_kappa.ipynb
+++ b/human_eval_kappa.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### This code was for an experiment in the supplementary material"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -34,6 +41,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#fetching the data from Firestore database instead of using the CSV file - they are the same data\n",
     "db = firestore.Client.from_service_account_json(\"ct-llm-firebase-key.json\")"
    ]
   },
