experimenting with prompt contrasting

--- a/demo_scripts_batch_gen_eval_ctpub.ipynb
+++ b/demo_scripts_batch_gen_eval_ctpub.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -343,6 +343,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_pub = pd.read_csv('hidden_data/CT-Pub-With-Examples-Corrected-allgen.csv')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -351,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -368,14 +377,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "103it [24:08, 14.06s/it]\n"
+      "103it [00:15,  6.60it/s]\n"
      ]
     }
    ],
@@ -384,6 +393,7 @@
     "from tqdm import tqdm\n",
     "\n",
     "for index, row in tqdm(data_pub.iterrows()):\n",
+    "\n",
     "    qstart = module.get_question_from_row(row)\n",
     "\n",
     "    reference_list = module.extract_elements_v2(row['Paper_BaselineMeasures_Corrected'])\n",
@@ -393,19 +403,19 @@
     "    candidate_lzs = module.extract_elements_v2(row['llama3_70b_it_zs_gen'])\n",
     "    candidate_lts = module.extract_elements_v2(row['llama3_70b_it_ts_gen'])\n",
     "    \n",
-    "    system_message_gzs, question_gzs = module.build_gpt4_eval_prompt(reference_list, \n",
+    "    system_message_gzs, question_gzs = module.build_gpt4_eval_prompt_with_example(reference_list, \n",
     "                                                            candidate_gzs, \n",
     "                                                            qstart)\n",
     "    \n",
-    "    system_message_gts, question_gts = module.build_gpt4_eval_prompt(reference_list,\n",
+    "    system_message_gts, question_gts = module.build_gpt4_eval_prompt_with_example(reference_list,\n",
     "                                                            candidate_gts,\n",
     "                                                            qstart)\n",
     "    \n",
-    "    system_message_lzs, question_lzs = module.build_gpt4_eval_prompt(reference_list,\n",
+    "    system_message_lzs, question_lzs = module.build_gpt4_eval_prompt_with_example(reference_list,\n",
     "                                                            candidate_lzs,\n",
     "                                                            qstart)\n",
     "    \n",
-    "    system_message_lts, question_lts = module.build_gpt4_eval_prompt(reference_list,\n",
+    "    system_message_lts, question_lts = module.build_gpt4_eval_prompt_with_example(reference_list,\n",
     "                                                            candidate_lts,\n",
     "                                                            qstart)\n",
     "\n",
@@ -431,7 +441,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "eval_data_pub.to_csv('hidden_data/CT-Pub-With-Examples-Corrected-allgpteval.csv', index=False)"
+    "eval_data_pub.to_csv('hidden_data/CT-Pub-With-Examples-Corrected-allgpteval-eval-prompt-edited.csv', index=False)"
    ]
   }
  ],
